# reaplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  tests.cpp  vcpkg.txt
cmake/: reaplus-config.cmake
include/reaplus/: Action.h  AutomationMode.h  Chunk.h  Fx.h  FxChain.h  FxParameter.h  FxPreset.h  Guid.h  HelperControlSurface.h  IncomingMidiEvent.h  MidiInputDevice.h  MidiOutputDevice.h  ModelUtil.h  Pan.h  Parameter.h  Playrate.h  Project.h  ReaPlusIntegrationTest.h  Reaper.h  RecordingInput.h  RegisteredAction.h  Section.h  Track.h  TrackArm.h  TrackMute.h  TrackPan.h  TrackSend.h  TrackSendVolume.h  UndoBlock.h  Volume.h  trackvolume.h  utility.h
include/reaplus/util/: ReaperConsoleLogSink.h  log.h
lib/reaper/: reaper_plugin.h  reaper_plugin_functions.h
reaplus/: Action.cpp  Action.h  AutomationMode.h  Chunk.cpp  Chunk.h  Fx.cpp  Fx.h  FxChain.cpp  FxChain.h  FxEnable.cpp  FxEnable.h  FxParameter.cpp  FxParameter.h  FxPreset.cpp  FxPreset.h  Guid.cpp  Guid.h  HelperControlSurface.cpp  HelperControlSurface.h  IncomingMidiEvent.cpp  IncomingMidiEvent.h  MasterPlayrate.cpp  MasterPlayrate.h  MasterTempo.cpp  MasterTempo.h  MidiInputDevice.cpp  MidiInputDevice.h  MidiMessage.cpp  MidiMessage.h  MidiOutputDevice.cpp  MidiOutputDevice.h  ModelUtil.cpp  Pan.cpp  Pan.h  Parameter.cpp  Parameter.h  Playrate.cpp  Project.cpp  Project.h  ReaPlusIntegrationTest.cpp  (+37 more)
reaplus/util/: ReaperConsoleLogSink.h  log.cpp  rx-relaxed-runloop.hpp
src/: Chunk.cpp  Fx.cpp  FxEnable.cpp  FxParameter.cpp  HelperControlSurface.cpp  MasterPlayrate.cpp  MidiInputDevice.cpp  Pan.cpp  Parameter.cpp  Playrate.cpp  Project.cpp  ReaPlusIntegrationTest.cpp  Reaper.cpp  RecordingInput.cpp  RegisteredAction.cpp  Section.cpp  Track.cpp  TrackMute.cpp  TrackPan.cpp  TrackSend.cpp  TrackSendPan.cpp  TrackSendVolume.cpp  UndoBlock.cpp  utility.cpp
src/main/: Action.cpp  Fx.cpp  FxChain.cpp  FxParameter.cpp  FxPreset.cpp  Guid.cpp  IncomingMidiEvent.cpp  MasterTempo.cpp  MidiMessage.cpp  MidiOutputDevice.cpp  ModelUtil.cpp  Pan.cpp  Playrate.cpp  Project.cpp  ReaPlusIntegrationTest.cpp  Reaper.cpp  Tempo.cpp  Track.cpp  TrackArm.cpp  TrackMute.cpp  TrackSelection.cpp  TrackSend.cpp  TrackSolo.cpp  TrackVolume.cpp  Volume.cpp
src/main/util/: ReaperConsoleLogSink.cpp  log.cpp
src/test/: tests.cpp
src/util/: ReaperConsoleLogSink.cpp
test/: CMakeLists.txt
